[pom] Move to java 11 requirement