@@ -154,8 +154,8 @@
         <allowed.build.jdks>[11,12),[17,18),[20,21),[21,22),[22,23)</allowed.build.jdks>
 
         <!-- Maven compiler options -->
-        <java.version>8</java.version>
-        <java-release.version>8</java-release.version>
+        <java.version>11</java.version>
+        <java-release.version>11</java-release.version>
         <maven.compiler.release>${java-release.version}</maven.compiler.release>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -1147,7 +1147,6 @@
             </build>
         </profile>
 
-        <!-- Add when moving to jdk 11
         <profile>
             <id>jdk11on</id>
             <activation>
@@ -1161,7 +1160,7 @@
                             <artifactId>maven-javadoc-plugin</artifactId>
                             <configuration>
                                 <additionalOptions combine.children="append">
-                                    <option>- -add-modules</option>
+                                    <option>--add-modules</option>
                                     <option>java.desktop</option>
                                 </additionalOptions>
                             </configuration>
@@ -1170,7 +1169,6 @@
                 </pluginManagement>
             </build>
         </profile>
-        -->
 
         <profile>
             <id>jdk17on</id>
